--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primer/octicons-react": "19.3.0",
     "autoprefixer": "10.4.14",
     "classnames": "2.3.2",
     "jotai": "2.2.1",
@@ -17,8 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind": "4.0.0",
-    "tailwindcss": "3.3.2",
-    "zustand": "4.3.8"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@types/react": "18.0.37",
