--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind": "4.0.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "zustand": "4.3.8"
   },
   "devDependencies": {
     "@types/react": "18.0.37",
