--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prepare": "husky install",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -36,6 +37,8 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.4",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
     "prettier": "2.8.8",
     "typescript": "5.0.2",
     "vite": "4.3.9"
