--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@headlessui/react": "1.7.16",
     "@primer/octicons-react": "19.3.0",
     "autoprefixer": "10.4.14",
-    "classnames": "2.3.2",
     "jotai": "2.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind": "4.0.0",
+    "tailwind-merge": "1.14.0",
     "tailwindcss": "3.3.2",
     "zustand": "4.3.8"
   },
