--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "squared-ci",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --fix --report-unused-disable-directives --max-warnings 0",
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
     "prepare": "husky install",
-    "preview": "vite preview"
+    "start": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "1.7.16",
     "@primer/octicons-react": "19.5.0",
     "autoprefixer": "10.4.14",
     "jotai": "2.3.1",
+    "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,12 +24,14 @@
     "zustand": "4.4.1"
   },
   "devDependencies": {
+    "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.3.0",
     "@typescript-eslint/parser": "6.3.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.28.0",
@@ -38,11 +39,9 @@
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "7.33.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.3",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
     "prettier": "3.0.1",
-    "typescript": "5.1.6",
-    "vite": "4.4.9"
+    "typescript": "5.1.6"
   }
 }
