refactor: extract dialog component & shared styles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,7 +86,8 @@
       "typescript": {
         "@/editor/": "./src/apps/editor",
         "@/landing/": "./src/apps/landing",
-        "@/aero": "./src/libs/aero/index.ts"
+        "@/aero": "./src/libs/aero/index.ts",
+        "@/pulse": "./src/libs/pulse/index.ts"
       },
       "node": {
         "extensions": [".ts", ".tsx"],
