feat: added dark theme in landing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/editor/*": ["./src/apps/editor/*"],
       "@/landing/*": ["./src/apps/landing/*"],
       "@/aero": ["./src/libs/aero/index.ts"],
-      "@/pulse": ["./src/libs/pulse/index.ts"]
+      "@/pulse": ["./src/libs/pulse/index.ts"],
+      "@/chain": ["./src/libs/chain/index.ts"]
     },
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
