--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,7 +87,8 @@
         "@/editor/": "./src/apps/editor",
         "@/landing/": "./src/apps/landing",
         "@/aero": "./src/libs/aero/index.ts",
-        "@/pulse": "./src/libs/pulse/index.ts"
+        "@/pulse": "./src/libs/pulse/index.ts",
+        "@/chain": "./src/libs/chain/index.ts"
       },
       "node": {
         "extensions": [".ts", ".tsx"],
