--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Lint project
+        run: yarn lint
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
