--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,14 @@
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
   "plugins": ["react", "@typescript-eslint", "import"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
     "@typescript-eslint/consistent-type-imports": "error",
     "arrow-body-style": ["error", "as-needed"],
     "import/extensions": [
