fix: correct minor issue with expandable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "baseUrl": ".",
     "target": "es2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "ESNext",
     "skipLibCheck": true,
     "moduleResolution": "node",
@@ -38,7 +34,5 @@
     ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
