--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "prepare": "husky install",
     "start": "next lint"
   },
+  "engines": {
+    "node": "^18.17"
+  },
   "dependencies": {
     "@headlessui/react": "1.7.17",
-    "@primer/octicons-react": "19.7.0",
-    "autoprefixer": "10.4.15",
+    "@primer/octicons-react": "19.8.0",
+    "autoprefixer": "10.4.16",
     "jotai": "2.4.2",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
+    "next": "13.5.3",
+    "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind": "4.0.0",
@@ -24,18 +27,18 @@
     "zustand": "4.4.1"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "10.0.4",
+    "@semantic-release/commit-analyzer": "11.0.0",
     "@semantic-release/exec": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.5.0",
-    "@typescript-eslint/parser": "6.5.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "@types/node": "20.7.0",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.8",
+    "@typescript-eslint/eslint-plugin": "6.7.3",
+    "@typescript-eslint/parser": "6.7.3",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.3",
     "eslint-config-prettier": "9.0.0",
-    "eslint-import-resolver-typescript": "3.6.0",
+    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-prettier": "5.0.0",
@@ -44,7 +47,10 @@
     "husky": "8.0.3",
     "lint-staged": "14.0.1",
     "prettier": "3.0.3",
-    "semantic-release": "21.1.2",
+    "semantic-release": "22.0.5",
     "typescript": "5.2.2"
+  },
+  "volta": {
+    "node": "18.18.0"
   }
 }
