--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,6 +93,7 @@
       "typescript": {
         "@/editor/": "./src/apps/editor",
         "@/landing/": "./src/apps/landing",
+        "@/roadmap/": "./src/apps/roadmap",
         "@/aero": "./src/libs/aero/index.ts",
         "@/pulse": "./src/libs/pulse/index.ts",
         "@/chain": "./src/libs/chain/index.ts"
