--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "prepare": "husky install",
-    "start": "next lint"
+    "start": "next start"
   },
   "engines": {
     "node": "^18.17"
