--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@primer/octicons-react": "19.8.0",
+    "@tanstack/react-query": "5.4.3",
     "autoprefixer": "10.4.16",
     "jotai": "2.5.0",
     "next": "13.5.6",
@@ -24,6 +25,7 @@
     "tailwind": "4.0.0",
     "tailwind-merge": "2.0.0",
     "tailwindcss": "3.3.5",
+    "use-debounce": "9.0.4",
     "zustand": "4.4.5"
   },
   "devDependencies": {
